# patd_lab4

./: CMakeLists.txt
include/: Node.h  Tree.h
src/: main.cpp  test.cpp
